--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
